--- a/new-api/Dockerfile
+++ b/new-api/Dockerfile
@@ -5,6 +5,8 @@ COPY mvnw .
 COPY pom.xml .
 COPY src src
 
+RUN apt-get update && apt-get install dos2unix
+RUN dos2unix mvnw
 RUN ./mvnw -B package
 
 FROM eclipse-temurin:17-jre-jammy
